<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Magellan</string>
    <string name="mainactivity_menu_details">Details</string>
    <string name="mainactivity_context_share">Share</string>
    <string name="mainactivity_context_copy">Copy</string>
    <string name="mainactivity_context_delete">Delete</string>
    <string name="mainactivity_context_rename">Rename</string>
    <string name="mainactivity_context_details">Details</string>
    <string name="mainactivity_context_wall">Set as wallaper</string>
    <string name="mainactivity_menu_exit">Exit</string>
	<string name="mainactivity_menu_paste">Paste</string>
    <string name="mainactivity_menu_create">New...</string>
	<string name="mainactivity_menu_create_file">Blank file</string>
	<string name="mainactivity_menu_create_folder">Empty folder</string>
    <string name="unit_gigabyte">GB</string>
    <string name="unit_megabyte">MB</string>
    <string name="unit_kilobyte">KB</string>
    <string name="unit_byte">Bytes</string>
    <string name="mainactivity_file_description">File, %s</string>
	<string name="mainactivity_folder_description">Directory, %s elements</string>
	<string name="error_no_permissions_explore">You don\'t have permissions to explore this directory. It may be a system directory.</string>
	<string name="error_no_permissions_create">You don\'t have permissions to create a %s in this directory. It may be a system directory.</string>
	<string name="mainactivity_dialog_create_title">New %s</string>
	<string name="mainactivity_dialog_create_ok">Ok</string>
	<string name="mainactivity_dialog_prompt_name_title">Choose a name for the new %s:</string>
	<string name="mainactivity_dialog_prompt_name_ok">Ok</string>
	<string name="mainactivity_dialog_create_folder_title">New folder</string>
	<string name="error_dialog_ok">Ok</string>
	<string name="error_invalid_character_in_filename">You can\'t user the character %s in a file name.</string>
	<string name="error_unknown">Unknown error.</string>
	<string name="mainactivity_dialog_create_file_title">New file</string>
	<string name="folder">folder</string>
	<string name="file">file</string>
	<string name="error_name_null">The name can\'t be empty.</string>
	<string name="error_duplicated_name">A file with that name already exists here.</string>
	<string name="error_unknown_with_message">Unknown error: %s</string>
	<string name="error_no_permissions_delete_folder">You don\'t have permissions to delete the contents of this folder. It may be a system folder.</string>
	<string name="error_dialog_cancel">Cancel</string>
	<string name="error_no_permissions_delete">You don\'t have permissions to delete this %1$s. It may be a system %1$s.</string>
	<string name="error_dialog_title">Error</string>
	<string name="mainactivity_dialog_progress_getting_details">Getting details... </string>
	<string name="mainactivity_dialog_details_info">File path: %1$s\nFile size: %2$s\nItems count: %3$s\nMime type: %4$s\n</string>
	<string name="mainactivity_dialog_details_ok">Ok</string>
	<string name="copyoperation_copying">Copying elements...</string>
	<string name="error_permissions_cannot_read_source_folder">The source directory could not be read. Aborting.</string>
	<string name="error_permissions_cannot_create_destination_folder">The directory %s could not be created. Check permissions. Aborting.</string>
	<string name="error_source_file_does_not_exist">The source file does not exists. Aborting.</string>
	<string name="error_permissions_cannot_create_destination_files">Impossible to create files in this repository. Check it exists and you have enough permissions on it.</string>
	<string name="error_cannot_create_destination_file">An error occured while creating the new file: %s. Aborting.</string>
    <string name="copyactivity_success_title">Ok</string>
	<string name="error_permissions_cannot_read_source_file">The source file could not be read. Aborting.</string>
	<string name="copyactivity_success_ok">Ok</string>
	<string name="copyactivity_success_message">Copy ended with success.</string>
	<string name="error_permissions_cannot_write_parent_dir">You don\'t have write permissions to this directory.</string>
	<string name="error_permissions_cannot_rename_file">You don\'t have permissions to rename this file.</string>
	<string name="dialog_prompt_rename_title">Choose a new name :</string>
	<string name="error_activity_not_found">Error: No application found for this file.</string>
</resources>
