<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/action_create" 
		android:icon="@drawable/create"
		android:title="@string/mainactivity_menu_create">
		<menu>
			<item android:id="@+id/action_file"
				android:title="@string/mainactivity_menu_create_file" />
			<item android:id="@+id/action_folder"
				android:title="@string/mainactivity_menu_create_folder" />
		</menu>
	</item>
	<item android:id="@+id/mainactivity_menu_paste"
		android:icon="@drawable/paste"
		android:title="@string/mainactivity_menu_paste" />
	<item android:id="@+id/mainactivity_menu_quit"
		android:icon="@drawable/quit"
		android:title="@string/mainactivity_menu_exit" />
	<item android:id="@+id/mainactivity_menu_details"
		android:icon="@drawable/details"
		android:title="@string/mainactivity_menu_details" />
</menu>
